trying to fix menu cropped at the bottom for the address bar with js

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
   background-color: #ffbd5e;
   /* height: -webkit-fill-available; */
 }
